<resources>
    <string name="app_name2">Registro de Ocorrências Polícia Federal</string>
    <string name="num_ocorrencia" />
    <string name="numOcorrencia" />
    <string name="sedeOcorrencia" />
    <string name="peritosEnvolvidos" >Nome do policial</string>
    <string name="nome_do_respons_vel_presente_no_local">Nome do responsável presente no local</string>
    <string name="digite_aqui_o_nome_do_respons_vel">Digite aqui o nome do Responsável</string>
    <string name="cargo_do_respons_vel_presente_do_local">Cargo do responsável presente do local</string>
    <string name="digite_documento_do_respons_vel_presente_no_local">Digite o documento do responsável</string>
    <string name="documento_do_respons_vel_presente_no_local">Documento do responsável presente no local</string>
    <string name="digite_aqui_o_cargo_do_respons_vel">Digite aqui o cargo do responsável</string>
    <string name="entrevista">Entrevista</string>
    <string name="digite_aqui_os_fatos_relevantes_da_entrevista">Digite aqui os fatos relevantes da entrevista</string>
    <string-array name="tiposVestigios">
        <item>Impressões digitais</item>
        <item>Evidências impressas</item>
        <item>Material explosivo</item>
        <item>Drogas</item>
        <item>Evidências biológicas</item>
        <item>Armas de fogo e ferramentas</item>
    </string-array>

    <string-array name="vestigioManchaSangue">
        <item>Evidências biológicas</item>
        <item>Impressões digitais</item>
        <item>Evidências impressas</item>
        <item>Material explosivo</item>
        <item>Drogas</item>
        <item>Armas de fogo e ferramentas</item>
    </string-array>

    <string-array name="vestigioCapsula">
        <item>Armas de fogo e ferramentas</item>
        <item>Impressões digitais</item>
        <item>Evidências impressas</item>
        <item>Material explosivo</item>
        <item>Drogas</item>
        <item>Evidências biológicas</item>

    </string-array>

    </resources>
