<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_do_respons_vel_presente_no_local"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeResponsavel"
        app:layout_constraintTop_toBottomOf="@+id/editTextCargoResponsavel" />

    <EditText
        android:id="@+id/editTextNomeResponsavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/digite_aqui_o_nome_do_respons_vel"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <EditText
        android:id="@+id/editTextCargoResponsavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/digite_aqui_o_cargo_do_respons_vel"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCargo" />

    <TextView
        android:id="@+id/textViewCargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:text="@string/cargo_do_respons_vel_presente_do_local"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/editTextCargoResponsavel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDoc"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/documento_do_respons_vel_presente_no_local"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/editTextDocResponsavel"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeResponsavel" />

    <EditText
        android:id="@+id/editTextDocResponsavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/digite_documento_do_respons_vel_presente_no_local"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoc" />

    <TextView
        android:id="@+id/textViewEntrevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/entrevista"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/editTextEntrevistaResponsavel"
        app:layout_constraintTop_toBottomOf="@+id/editTextDocResponsavel" />

    <EditText
        android:id="@+id/editTextEntrevistaResponsavel"
        android:hint="@string/digite_aqui_os_fatos_relevantes_da_entrevista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntrevista" />

</android.support.constraint.ConstraintLayout>
